--- a/index.html
+++ b/index.html
@@ -2,30 +2,31 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>ULTRAKILL: Механики</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ULTRAKILL — Главная</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="florp-ultrakill.gif" alt="ULTRAKILL logo" class="logo">
-    <h1>Механики в ULTRAKILL</h1>
     <nav>
-      <a href="movement.html">Передвижение</a>
-      <a href="weapon.html">Оружие</a>
+      <ul>
+        <li><a href="index.html">🏠 Главная</a></li>
+        <li><a href="movement.html">🚶‍♂️ Передвижение</a></li>
+        <li><a href="weapon.html">🔫 Оружие</a></li>
+      </ul>
     </nav>
+    <h1>⚔️ ULTRAKILL: Техники и механики</h1>
   </header>
+
   <main>
-    <section>
-      <h2>Добро пожаловать!</h2>
-      <p>Изучите техники передвижения и боевые приёмы в игре <strong>ULTRAKILL</strong>.</p>
-      <img src="Logo1.png" alt="ULTRAKILL обложка" class="hero-img">
-      <p>Ultrakill — компьютерная игра в жанре шутера от первого лица, разработанная Арси Паталой и изданная компанией New Blood Interactive.</p>
+    <section class="hero">
+      <img src="Logo1.png" alt="ULTRAKILL Cover" class="hero-img">
+      <p>Добро пожаловать! Изучи самые важные техники из игры ULTRAKILL: от мобильности до владения оружием.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 ULTRAKILL Wiki</p>
+    <p>© 2025 ULTRAKILL Fan Site</p>
   </footer>
 </body>
 </html>
