--- a/weapon.html
+++ b/weapon.html
@@ -2,59 +2,57 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Техники оружия</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ULTRAKILL — Техники оружия</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Боевые техники</h1>
     <nav>
-      <a href="index.html">Главная</a>
-      <a href="movement.html">Передвижение</a>
+      <ul>
+        <li><a href="index.html">🏠 Главная</a></li>
+        <li><a href="movement.html">🚶‍♂️ Передвижение</a></li>
+        <li><a href="weapon.html">🔫 Оружие</a></li>
+      </ul>
     </nav>
+    <h1>🔫 Техники владения оружием</h1>
   </header>
 
-  <main>
-    <article>
-      <h2>Rocket Surfing</h2>
-      <p>Игрок выстреливает себе под ноги ракетницей, используя скольжение на ракете для перемещения на высоту или дальность.</p>
-    </article>
+  <main class="tech-grid">
 
-    <article>
-      <h2>Core Nuking</h2>
+    <div class="tech-card">
+      <h3>☢️ Core Nuking</h3>
       <p>Создаёт мощный взрыв, комбинируя Core Eject и Railgun, чтобы нанести огромный урон.</p>
-    </article>
+      <img src="0211(19).gif" alt="Core Nuking гиф" class="gif">
+    </div>
 
-    <article>
-      <h2>Deadcoin</h2>
-      <p>Метание монетки и выстрел в неё в правильный момент удваивает урон монеты.</p>
-    </article>
-
-    <article>
-      <h2>Railcoin</h2>
+    <div class="tech-card">
+      <h3>⚡ Railcoin</h3>
       <p>Выстрел по монете из Railgun позволяет нанести урон сквозь препятствия с высокой точностью.</p>
-    </article>
+      <img src="0211(13).gif" alt="Railcoin гиф" class="gif">
+    </div>
 
-    <article>
-      <h2>Projectile Boost</h2>
-      <p>Удар по пулям дробовика, чтобы ускорить и усилить выстрел.
-        Можно использовать с техникой Shotgun Swapping!
-      </p>
-      <img src="media (2).gif" alt="Projectile Boost гиф" class="gif">
-    </article>
+    <div class="tech-card">
+      <h3>🥊 Coin Punch</h3>
+      <p>Удар по монете, отправляющий её к врагам и удваивающий её урон.</p>
+      <img src="media.gif" alt="Coin Punch гиф" class="gif">
+    </div>
 
-    <article>
-      <h2>Shotgun Swapping</h2>
-      <p>Чередование дробовиков для быстрого нанесения урона без потери темпа стрельбы.
-        Можно использовать с техникой Projectile Boost!
-      </p>
-      <img src="media (1).gif" alt="Shotgun Swapping гиф" class="gif">
-    </article>
+    <div class="tech-card">
+      <h3>💥 Projectile Boost</h3>
+      <p>Удар по пулям дробовика, чтобы ускорить и усилить выстрел. Можно использовать с техникой Shotgun Swapping!</p>
+      <img src="0211(18).gif" alt="Projectile Boost гиф" class="gif">
+    </div>
+
+    <div class="tech-card">
+      <h3>🔁 Shotgun Swapping</h3>
+      <p>Чередование дробовиков для быстрого нанесения урона без потери темпа стрельбы. Можно использовать с Projectile Boost!</p>
+      <img src="0211(17).gif" alt="Shotgun Swapping гиф" class="gif">
+    </div>
   </main>
 
   <footer>
-    <p>&copy; 2025 ULTRAKILL Wiki</p>
+    <p>© 2025 ULTRAKILL Fan Site</p>
   </footer>
 </body>
 </html>
