--- a/movement.html
+++ b/movement.html
@@ -20,19 +20,19 @@
   <main class="tech-grid">
       <div class="tech-card">
         <h2>Slide Jump 🦶</h2>
-        <p>Комбинирует скольжение и прыжок, позволяя преодолевать большие расстояния с высокой скоростью.</p>
+        <p>Комбинирует скольжение и прыжок, позволяя преодолевать большие расстояния с высокой скоростью. Идеально подходит для тех, кто считает, что ходить — это для слабаков.</p>
         <img src="0211(16).gif" alt="Slide Jump гиф" class="gif">
       </div>
 
       <div class="tech-card">
         <h2>Slam Storage 💥</h2>
-        <p>Одновременное нажатие прыжка и скольжения на стене позволяет сохранить силу падения и использовать её для суперпрыжка или усиленного движения.</p>
+        <p>Физику можно обмануть — особенно если ты владеешь этой техникой. Прыгни, врежься в стену, нажми прыжок и скольжение — и та-даам! Ты превращаешься в снаряд, полный обиды на закон тяготения.</p>
         <img src="0211(15).gif" alt="Slam Storage гиф" class="gif">
       </div>
 
       <div class="tech-card">
         <h3>🚀 Rocket Surfing</h3>
-        <p>Игрок выстреливает себе под ноги ракетницей, используя скольжение на ракете для перемещения на высоту или дальность.</p>
+        <p>Почему бы не прокатиться на собственной ракете? Это ведь безопасно… ну, почти. Главное — выстрелить себе под ноги и молиться, чтобы рассчитать угол. Помогает подняться туда, где тебя точно не ждут. А заодно получить новый опыт — каково это быть снарядом.</p>
         <img src="0211(14).gif" alt="Rocket Surfing гиф" class="gif">
       </div>
     </main>
