--- a/weapon.html
+++ b/weapon.html
@@ -22,31 +22,31 @@
 
     <div class="tech-card">
       <h3>☢️ Core Nuking</h3>
-      <p>Создаёт мощный взрыв, комбинируя Core Eject и Railgun, чтобы нанести огромный урон.</p>
+      <p>Комбинируешь Core Eject и Railgun — и устраиваешь локальный апокалипсис. Идеально, если ты хочешь сказать врагам: «Я не зол, я просто творю искусство разрушения».</p>
       <img src="0211(19).gif" alt="Core Nuking гиф" class="gif">
     </div>
 
     <div class="tech-card">
       <h3>⚡ Railcoin</h3>
-      <p>Выстрел по монете из Railgun позволяет нанести урон сквозь препятствия с высокой точностью.</p>
+      <p>Метни монетку… и выстрели в неё снайперской точностью! Работает отлично, особенно если у врагов нет сдачи.</p>
       <img src="0211(13).gif" alt="Railcoin гиф" class="gif">
     </div>
 
     <div class="tech-card">
       <h3>🥊 Coin Punch</h3>
-      <p>Удар по монете, отправляющий её к врагам и удваивающий её урон.</p>
+      <p>Хочешь, чтобы деньги работали на тебя? Просто ударь по монетке! Монета летит, свистит, и с каждого удара становится всё злее. Урон? Удваивается! Стиль? Запредельный.</p>
       <img src="media.gif" alt="Coin Punch гиф" class="gif">
     </div>
 
     <div class="tech-card">
       <h3>💥 Projectile Boost</h3>
-      <p>Удар по пулям дробовика, чтобы ускорить и усилить выстрел. Можно использовать с техникой Shotgun Swapping!</p>
+      <p>Побить свои пули, чтобы они стали злее? Звучит как безумие — и ты абсолютно прав. Ударь по снарядам дробовика, и они понесутся вперёд с такой скоростью, будто опаздывают на последний автобус. Можно использовать с техникой Shotgun Swapping!</p>
       <img src="0211(18).gif" alt="Projectile Boost гиф" class="gif">
     </div>
 
     <div class="tech-card">
       <h3>🔁 Shotgun Swapping</h3>
-      <p>Чередование дробовиков для быстрого нанесения урона без потери темпа стрельбы. Можно использовать с Projectile Boost!</p>
+      <p>Два дробовика лучше, чем один. А если их быстро менять, можно превратиться в пулемёт с ручным управлением. Можно использовать с Projectile Boost!</p>
       <img src="0211(17).gif" alt="Shotgun Swapping гиф" class="gif">
     </div>
   </main>
