--- a/weapon.html
+++ b/weapon.html
@@ -22,13 +22,13 @@
 
     <div class="tech-card">
       <h3>☢️ Core Nuking</h3>
-      <p>Комбинируешь Core Eject и Railgun — и устраиваешь локальный апокалипсис. Идеально, если ты хочешь сказать врагам: «Я не зол, я просто творю искусство разрушения».</p>
+      <p>Комбинируешь дробовик Core Eject и рельсотрон — и устраиваешь локальный апокалипсис. Идеально, если ты хочешь сказать врагам: «Я не зол, я просто творю искусство разрушения».</p>
       <img src="0211(19).gif" alt="Core Nuking гиф" class="gif">
     </div>
 
     <div class="tech-card">
       <h3>⚡ Railcoin</h3>
-      <p>Метни монетку… и выстрели в неё снайперской точностью! Работает отлично, особенно если у врагов нет сдачи.</p>
+      <p>Метни монетку… и выстрели в неё снайперской точностью рельсотроном! Работает отлично, особенно если у врагов нет сдачи.</p>
       <img src="0211(13).gif" alt="Railcoin гиф" class="gif">
     </div>
 
