--- a/movement.html
+++ b/movement.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="index.html">🏠 Главная</a></li>
-        <li><a href="weapon.html">🔫 Оружие</a></li>
+        <li><a href="weapon.html">🔫 Техники с оружием</a></li>
       </ul>
     </nav>
   </header>
