--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <nav>
       <ul>
         <li><a href="index.html">🏠 Главная</a></li>
-        <li><a href="movement.html">🚶‍♂️ Передвижение</a></li>
-        <li><a href="weapon.html">🔫 Оружие</a></li>
+        <li><a href="movement.html">🚶‍♂️Техники для передвижения</a></li>
+        <li><a href="weapon.html">🔫 Техники с оружием</a></li>
       </ul>
     </nav>
     <h1>⚔️ ULTRAKILL: Техники и механики</h1>
