--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">🏠 Главная</a></li>
         <li><a href="movement.html">🚶‍♂️Техники для передвижения</a></li>
         <li><a href="weapon.html">🔫 Техники с оружием</a></li>
+        <li><a href="arsenal.html">💥 Арсенал</a></li>
       </ul>
     </nav>
     <h1>⚔️ ULTRAKILL: Техники и механики</h1>
