--- a/weapon.html
+++ b/weapon.html
@@ -12,6 +12,7 @@
       <ul>
         <li><a href="index.html">🏠 Главная</a></li>
         <li><a href="movement.html">🚶‍♂️Техники для передвижения</a></li>
+        <li><a href="arsenal.html">💥 Арсенал</a></li>
       </ul>
     </nav>
     <h1>🔫 Техники владения оружием</h1>
