--- a/movement.html
+++ b/movement.html
@@ -13,6 +13,7 @@
       <ul>
         <li><a href="index.html">🏠 Главная</a></li>
         <li><a href="weapon.html">🔫 Техники с оружием</a></li>
+        <li><a href="arsenal.html">💥 Арсенал</a></li>
       </ul>
     </nav>
   </header>
